# hildon-theme-okuda

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  configure.ac.template  try_it_out.sh
applications/: Makefile.am  Makefile.in
applications/backgrounds/: Makefile.am
applications/calendar/: Makefile.am
applications/call-ui/: Makefile.am
applications/hildon-desktop/: Makefile.am  theme_bg.desktop.in  wallpaper_okudagram.desktop.in
applications/icons/: Makefile.am  index.theme  layout.txt
applications/mediaplayer/: Makefile.am  layout.txt
applications/rtcom-messaging-ui/: Makefile.am  layout.txt
applications/startup-wizard/: Makefile.am  layout.txt
data/: Makefile.am  gtkrc.source
debian/: changelog  changelog.old  changelog.template  control  control.template  copyright  postinst  postinst.template  prerm  prerm.template  rules  rules.template
matchbox-1/: Makefile.am
matchbox-2/: Makefile.am
template/: EmailWidgetBackgroundNormal  EmailWidgetBackgroundPressed  EmailWidgetHeaderNormal  EmailWidgetNoMessagesNormal  EmailWidgetNoMessagesPressed  Makefile.am
