SUBDIRS 		= template data applications matchbox-1 matchbox-2

MAINTAINERCLEANFILES	= Makefile.in aclocal.m4 configure 	\
			  config.h.in compile 			\
			  ltmain.sh depcomp missing 		\
			  install-sh config.sub 		\
			  config.guess intltool-extract.in 	\
			  intltool-merge.in intltool-update.in  \
			  mkinstalldirs build-stamp 		\
			  install-stamp configure-stamp		\
			  config.status 


