SUBDIRS                 = calendar           \
                          call-ui            \
                          hildon-desktop     \
                          mediaplayer        \
                          startup-wizard     \
                          rtcom-messaging-ui \
			  backgrounds	     \
			  icons
